--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The sixteenth homework</title>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
+    <div id="app" class="app"></div>
+
+    <script src="src/js/app.js"></script>
 </body>
 </html>
