--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <div id="app" class="app"></div>
 
+    <script src="node_modules/lodash/lodash.min.js"></script>
+    <script src="src/js/entities/Todo.js"></script>
+    <script src="src/js/entities/TodoList.js"></script>
     <script src="src/js/app.js"></script>
 </body>
 </html>
