--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
     <div id="app" class="app"></div>
 
-    <script src="node_modules/lodash/lodash.min.js"></script>
     <script src="src/js/utils.js"></script>
     <script src="src/js/listeners.js"></script>
     <script src="src/js/entities/DOMElement.js"></script>
     <script src="src/js/entities/Button.js"></script>
+    <script src="src/js/entities/Input.js"></script>
+    <script src="src/js/entities/Select.js"></script>
     <script src="src/js/entities/Form.js"></script>
+    <script src="src/js/entities/AddForm.js"></script>
     <script src="src/js/entities/Todo.js"></script>
     <script src="src/js/entities/TodoList.js"></script>
     <script src="src/js/app.core.js"></script>
