added edit feature

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <script src="src/js/entities/Select.js"></script>
     <script src="src/js/entities/Form.js"></script>
     <script src="src/js/entities/AddForm.js"></script>
+    <script src="src/js/entities/EditForm.js"></script>
     <script src="src/js/entities/Todo.js"></script>
     <script src="src/js/entities/TodoList.js"></script>
+    <script src="src/js/entities/ActionBar.js"></script>
     <script src="src/js/app.core.js"></script>
     <script src="src/js/app.js"></script>
 </body>
